test/visibility/import/duplicateMod.good
duplicateMod.chpl:7: In module 'Program':
duplicateMod.chpl:8: error: cannot 'import' symbol 'Sub' as it is not defined in 'Sub'
